--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@react-spring/three": "^9.2.3",
     "@react-three/fiber": "^7.0.1",
+    "antd": "^4.16.5",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "three": "^0.129.0",
